--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/dotnetcore,macos,windows
+
+appsettings.development.json
