--- a/src/Gomsle.Api/Gomsle.Api.csproj
+++ b/src/Gomsle.Api/Gomsle.Api.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.2.0" />
-    <PackageReference Include="AspNetCore.Identity.AmazonDynamoDB" Version="0.1.1" />
-    <PackageReference Include="Community.OpenIddict.AmazonDynamoDB" Version="0.1.1" />
+    <PackageReference Include="AspNetCore.Identity.AmazonDynamoDB" Version="0.1.3" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5.10" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
+    <PackageReference Include="Community.OpenIddict.AmazonDynamoDB" Version="0.1.3" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
   </ItemGroup>
 
