--- a/src/Gomsle.Api/appsettings.json
+++ b/src/Gomsle.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Profile": "default",
+    "Region": "eu-central-1"
+  },
+  "DynamoDB": {
+    "ServiceUrl": ""
+  }
 }
