--- a/src/Gomsle.App/appsettings.json
+++ b/src/Gomsle.App/appsettings.json
@@ -12,5 +12,10 @@
   },
   "DynamoDB": {
     "ServiceUrl": ""
+  },
+  "EmailSenderOptions": {
+    "ApiKey": "",
+    "FromAddress": "hello@gomsle.com",
+    "FromName": "The Gömsle Team"
   }
 }
