--- a/src/Gomsle.App/Gomsle.App.csproj
+++ b/src/Gomsle.App/Gomsle.App.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5.10" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
     <PackageReference Include="Community.OpenIddict.AmazonDynamoDB" Version="0.1.3" />
+    <PackageReference Include="OdeToCode.AddFeatureFolders" Version="2.0.3" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
 </Project>
