Change mvc project to api and add test to register

--- a/src/Gomsle.Api/Properties/launchSettings.json
+++ b/src/Gomsle.Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "Gomsle.App": {
+    "Gomsle.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
