--- a/src/Gomsle.Api/Gomsle.Api.csproj
+++ b/src/Gomsle.Api/Gomsle.Api.csproj
@@ -12,8 +12,12 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.5.10" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
     <PackageReference Include="Community.OpenIddict.AmazonDynamoDB" Version="0.1.3" />
+    <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="OdeToCode.AddFeatureFolders" Version="2.0.3" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
   </ItemGroup>
 
