Ensure internal application is created when app starts

--- a/src/Gomsle.Api/appsettings.json
+++ b/src/Gomsle.Api/appsettings.json
@@ -17,5 +17,28 @@
     "ApiKey": "",
     "FromAddress": "hello@gomsle.com",
     "FromName": "The Gömsle Team"
+  },
+  "InternalOptions": {
+    "Accounts": [
+      {
+        "Name": "Gomsle",
+        "InternalApplications": [
+          {
+            "DisplayName": "Gomsle App",
+            "AutoProvision": true,
+            "EnableProvision": true,
+            "RedirectUris": [
+              "https://gomsle.com/login/callback"
+            ],
+            "PostLogoutRedirectUris": [
+              "https://gomsle.com/logout/callback"
+            ],
+            "DefaultOrigin": "https://gomsle.com",
+            "Origins": [],
+            "ConnectedOidcProviders": []
+          }
+        ]
+      }
+    ]
   }
 }
