--- a/src/Gomsle.Api/appsettings.json
+++ b/src/Gomsle.Api/appsettings.json
@@ -24,6 +24,7 @@
         "Name": "Gomsle",
         "InternalApplications": [
           {
+            "ClientId": "gomsle_app",
             "DisplayName": "Gomsle App",
             "AutoProvision": true,
             "EnableProvision": true,
