--- a/src/Gomsle.Api/Client/.env
+++ b/src/Gomsle.Api/Client/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_URL="http://localhost:5000"
 REACT_APP_AUTH_URL="http://localhost:5000"
 REACT_APP_CLIENT_ID="gomsle_app"
+
+BROWSER=none
